# test

./: .cirrus.yml  .cirun.yml  .cspell.json  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .prettierignore  .rustfmt.toml  .shellcheckrc  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE-APACHE  LICENSE-MIT  Makefile  azure-pipelines.yml
rust/: Cargo.toml
rust/lib/: Cargo.toml  README.md
rust/lib-no-std/: Cargo.toml
rust/lint/: Cargo.toml  lint.txt
rust/src/: lib.rs  main.rs
rust/target-spec-json/: aarch64-apple-darwin.json  aarch64-apple-ios-macabi.json  aarch64-apple-ios.json  aarch64-apple-tvos.json  aarch64-fuchsia.json  aarch64-pc-windows-msvc.json  aarch64-unknown-hermit.json  aarch64-unknown-linux-gnu.json  aarch64-unknown-linux-gnu_ilp32.json  aarch64-unknown-none-softfloat.json  aarch64-uwp-windows-msvc.json  aarch64-wrs-vxworks.json  aarch64_be-unknown-linux-gnu_ilp32.json  arm-linux-androideabi.json  arm-unknown-linux-musleabihf.json  armv4t-unknown-linux-gnueabi.json  armv5te-unknown-linux-musleabi.json  armv5te-unknown-linux-uclibceabi.json  armv6-unknown-freebsd.json  armv7-apple-ios.json  armv7-linux-androideabi.json  armv7-unknown-freebsd.json  armv7-unknown-linux-gnueabi.json  armv7-unknown-linux-gnueabihf.json  armv7r-none-eabi.json  asmjs-unknown-emscripten.json  avr-unknown-gnu-atmega328.json  hexagon-unknown-linux-musl.json  i386-apple-ios.json  i686-apple-darwin.json  i686-linux-android.json  i686-pc-windows-msvc.json  i686-unknown-freebsd.json  i686-unknown-haiku.json  i686-unknown-linux-gnu.json  i686-unknown-netbsd.json  (+53 more)
(+381 files in other folders)
