[package]
name = "codegen"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1"
duct = "0.13"
fs-err = "2"
indoc = "2"
once_cell = "1"
quote = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.24", features = ["derive"] }
